--- a/css/section-1.css
+++ b/css/section-1.css
@@ -9,7 +9,7 @@
   .first-header-label {
     float: right;
     margin: 40px 20px 40px 20px;
-    font-family: OpenSans;
+    font-family: 'Noto Sans', sans-serif;
     font-size: 18px;
     color: #3b4f64;
     vertical-align: middle;
