--- a/css/section-2.css
+++ b/css/section-2.css
@@ -21,7 +21,7 @@
   align-self: center;
   height: 500px;
   width: 500px;
-  transform: translateX(-300px);
+  /* transform: translateX(-300px); */
   animation-fill-mode: forwards;
 }
 
@@ -31,14 +31,33 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  transform: translateX(300px);
+  /* transform: translateX(30px); */
   animation-fill-mode: forwards;
 }
 
 .big-text-2 {
   max-width: 550px;
+  transform: translateX(30px);
 }
 
 .small-text-2 {
   max-width: 550px;
+  transform: translateX(30px);
+}
+
+.learn-button {
+  /* width: 226px;
+  height: 39px; */
+  transform: translateX(30px);
+  /* font-family: 'Noto Sans', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.69;
+  letter-spacing: 0.8px;
+  text-align: center;
+  color: #3b4f64;
+  background-color: transparent;
+  border: 2px solid #3b4f64; */
 }
