--- a/css/section-3.css
+++ b/css/section-3.css
@@ -1,24 +1,27 @@
 
 .section-3-main-container {
-	position: absolute;
+  position: absolute;
+  left: 5%;
 	top: 200px;
 	bottom: 0;
-	left: 190px;
 	right: 0;
 	height: 100%;
 	width: 100%;
 }
 
 .section-3-lottie-row {
+  position: relative;
 	height: 290px;
-	width: 100%;
+	width: 90%;
 	display: flex;
-	flex-direction: row;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .section-3-row-item {
 	height: 290px;
-	width: 275px;
+  width: 300px;
 	opacity: 0.0;
 	animation-fill-mode: forwards;
 }
